--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
 bitflags = "2.9"
+bytes = "1.10"
 clap = { version = "4.5", features = ["derive"] }
+dashmap = "6.1"
 foldhash = "0.1"
 humantime-serde = "1.1"
 serde = { version = "1.0", features = ["derive"] }
