--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap = { version = "4.5", features = ["derive"] }
 dashmap = "6.1"
 foldhash = "0.1"
 humantime-serde = "1.1"
+rmp-serde = "1.3"
 serde = { version = "1.0", features = ["derive"] }
 serde-inline-default = "0.2"
 serde_json = { version = "1.0" }
