--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ bytes = "1.10"
 clap = { version = "4.5", features = ["derive"] }
 dashmap = "6.1"
 foldhash = "0.1"
+futures-util = "0.3"
 humantime-serde = "1.1"
 rmp-serde = "1.3"
 serde = { version = "1.0", features = ["derive"] }
@@ -23,6 +24,7 @@ serde-inline-default = "0.2"
 serde_json = { version = "1.0" }
 tikv-jemallocator = "0.6"
 tokio = { version = "1.46", features = ["full"] }
+tokio-tungstenite = "0.27"
 tokio-util = "0.7"
 tracing = "0.1"
 tracing-subscriber = "0.3"
