--- a/ruapc/Cargo.toml
+++ b/ruapc/Cargo.toml
@@ -13,6 +13,7 @@ ruapc-macro = { version = "0.1.0", path = "../ruapc-macro" }
 
 bitflags.workspace = true
 bytes.workspace = true
+clap.workspace = true
 dashmap.workspace = true
 foldhash.workspace = true
 humantime-serde.workspace = true
@@ -24,6 +25,8 @@ tokio.workspace = true
 tokio-util.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+tokio-tungstenite.workspace = true
+futures-util.workspace = true
 
 [lints]
 workspace = true
