--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ foldhash = "0.1"
 futures-util = "0.3"
 humantime-serde = "1.1"
 rmp-serde = "1.3"
+schemars = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde-inline-default = "0.2"
 serde_json = { version = "1.0" }
