--- a/ruapc-demo/Cargo.toml
+++ b/ruapc-demo/Cargo.toml
@@ -13,6 +13,7 @@ license.workspace = true
 ruapc = { path = "../ruapc" }
 
 clap.workspace = true
+schemars.workspace = true
 serde.workspace = true
 tikv-jemallocator.workspace = true
 tokio.workspace = true
