--- a/ruapc/Cargo.toml
+++ b/ruapc/Cargo.toml
@@ -18,6 +18,7 @@ dashmap.workspace = true
 foldhash.workspace = true
 humantime-serde.workspace = true
 rmp-serde.workspace = true
+schemars.workspace = true
 serde.workspace = true
 serde-inline-default.workspace = true
 serde_json.workspace = true
