--- a/ruapc/Cargo.toml
+++ b/ruapc/Cargo.toml
@@ -16,7 +16,10 @@ bytes.workspace = true
 clap.workspace = true
 dashmap.workspace = true
 foldhash.workspace = true
+http-body-util.workspace = true
 humantime-serde.workspace = true
+hyper.workspace = true
+hyper-util.workspace = true
 rmp-serde.workspace = true
 schemars.workspace = true
 serde.workspace = true
