--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,10 @@ clap = { version = "4.5", features = ["derive"] }
 dashmap = "6.1"
 foldhash = "0.1"
 futures-util = "0.3"
+http-body-util = "0.1"
 humantime-serde = "1.1"
+hyper = { version = "1.6", features = ["client", "server", "http1"] }
+hyper-util = { version = "0.1", features = ["tokio"] }
 rmp-serde = "1.3"
 schemars = "1.0"
 serde = { version = "1.0", features = ["derive"] }
