--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ futures-util = "0.3"
 http-body-util = "0.1"
 humantime-serde = "1.1"
 hyper = { version = "1.6", features = ["client", "server", "http1"] }
+hyper-tungstenite = "0.18"
 hyper-util = { version = "0.1", features = ["tokio"] }
 rmp-serde = "1.3"
 schemars = "1.0"
