--- a/ruapc/Cargo.toml
+++ b/ruapc/Cargo.toml
@@ -35,3 +35,6 @@ futures-util.workspace = true
 
 [lints]
 workspace = true
+
+[dev-dependencies]
+reqwest = { version = "0.12", features = ["json"] }
