--- a/ruapc/Cargo.toml
+++ b/ruapc/Cargo.toml
@@ -8,8 +8,13 @@ repository.workspace = true
 description.workspace = true
 license.workspace = true
 
+[features]
+rdma = ["ruapc-rdma"]
+default = []
+
 [dependencies]
-ruapc-macro = { version = "0.1.0", path = "../ruapc-macro" }
+ruapc-macro ={ version = "0.1.0", path = "../ruapc-macro" }
+ruapc-rdma = { version = "0.1.0", path = "../ruapc-rdma", optional = true }
 
 bitflags.workspace = true
 bytes.workspace = true
@@ -32,6 +37,7 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 tokio-tungstenite.workspace = true
 futures-util.workspace = true
+libc.workspace = true
 
 [lints]
 workspace = true
