--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["ruapc", "ruapc-demo", "ruapc-macro"]
+members = ["ruapc", "ruapc-demo", "ruapc-macro", "ruapc-rdma"]
 resolver = "2"
 
 [workspace.package]
@@ -11,6 +11,7 @@ description = "A Rust RPC library"
 license = "MIT OR Apache-2.0"
 
 [workspace.dependencies]
+bindgen = "0.72"
 bitflags = "2.9"
 bytes = "1.10"
 clap = { version = "4.5", features = ["derive"] }
@@ -22,6 +23,8 @@ humantime-serde = "1.1"
 hyper = { version = "1.6", features = ["client", "server", "http1"] }
 hyper-tungstenite = "0.18"
 hyper-util = { version = "0.1", features = ["tokio"] }
+libc = "0.2"
+pkg-config = "0.3"
 rmp-serde = "1.3"
 schemars = "1.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -32,7 +35,7 @@ tokio = { version = "1.47", features = ["full"] }
 tokio-tungstenite = "0.27"
 tokio-util = "0.7"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["chrono"] }
 
 [workspace.lints.clippy]
 pedantic = "warn"
