add rdma feature for ruapc-demo

--- a/ruapc-demo/Cargo.toml
+++ b/ruapc-demo/Cargo.toml
@@ -9,6 +9,9 @@ repository.workspace = true
 description.workspace = true
 license.workspace = true
 
+[features]
+rdma = ["ruapc/rdma"]
+
 [dependencies]
 ruapc = { path = "../ruapc" }
 
