--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,9 @@ humantime-serde = "1.1"
 hyper = { version = "1.6", features = ["client", "server", "http1"] }
 hyper-tungstenite = "0.18"
 hyper-util = { version = "0.1", features = ["tokio"] }
+indexmap = "2.11"
 libc = "0.2"
+openapiv3 = "2.2"
 pkg-config = "0.3"
 rmp-serde = "1.3"
 schemars = "1.0"
@@ -38,4 +40,3 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["chrono"] }
 
 [workspace.lints.clippy]
-pedantic = "warn"
