--- a/ruapc/Cargo.toml
+++ b/ruapc/Cargo.toml
@@ -26,6 +26,8 @@ humantime-serde.workspace = true
 hyper.workspace = true
 hyper-tungstenite.workspace = true
 hyper-util.workspace = true
+indexmap.workspace = true
+openapiv3.workspace = true
 rmp-serde.workspace = true
 schemars.workspace = true
 serde.workspace = true
