--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -50,8 +50,8 @@ jobs:
         sudo apt install -y pkg-config libibverbs-dev ibverbs-utils
         ibv_devinfo -d rxe_0 -v
         cargo install cargo-llvm-cov cargo-nextest
-        cargo llvm-cov nextest --all-features
-        cargo llvm-cov report --cobertura --output-path target/llvm-cov-target/cobertura.xml
+        cargo llvm-cov nextest --all-features --ignore-filename-regex "*/src/bin/*|ruapc-macro/*|ruapc/src/bin/*"
+        cargo llvm-cov report --cobertura --ignore-filename-regex "*/src/bin/*|ruapc-macro/*|ruapc/src/bin/*" --output-path target/llvm-cov-target/cobertura.xml
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4
