--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v6
 
     - name: Configure
       run: |
@@ -47,7 +47,8 @@ jobs:
     - name: Install llvm-tools
       uses: dtolnay/rust-toolchain@stable
       with:
-        components: llvm-tools-preview
+        toolchain: nightly
+        components: llvm-tools-preview,rustfmt,clippy
 
     - name: Install cargo-llvm-cov
       uses: taiki-e/install-action@v2
@@ -59,6 +60,8 @@ jobs:
         sudo prlimit --pid $$ -l=unlimited && ulimit -a
         sudo apt install -y pkg-config libibverbs-dev ibverbs-utils
         ibv_devinfo -d rxe_0 -v
+        cargo fmt -- --check
+        cargo clippy --release -- -D warnings
         cargo llvm-cov nextest --all-features --ignore-filename-regex "ruapc-demo/*|ruapc-macro/*|ruapc/src/bin/*"
         cargo llvm-cov report --cobertura --ignore-filename-regex "ruapc-demo/*|ruapc-macro/*|ruapc/src/bin/*" --output-path target/llvm-cov-target/cobertura.xml
 
